--- a/Code/site/_includes/head.liquid
+++ b/Code/site/_includes/head.liquid
@@ -18,6 +18,8 @@
     
     <link rel="stylesheet" href="css/main.scss">
     
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    
     <script src='/js/jquery-2.1.3.js'></script>
     
     <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
