--- a/Code/site/_sass/header.scss
+++ b/Code/site/_sass/header.scss
@@ -13,7 +13,7 @@
     display: inline-block;
     
     // Shadowing (3rd number is shadow size)
-    box-shadow: inset 0 -10px 8px -10px black ; //$brand-color or white?
+    //box-shadow: inset 0 -10px 8px -10px black ; //$brand-color or white?
     
     // Order begins at 5 for header
     z-index: 5;
@@ -27,7 +27,7 @@
         top: 0;
         width: 100%;
         height: 100%;
-        opacity: 0.8;
+        opacity: 0.7;
         background-image: $header-background;
         background-repeat: no-repeat;
         background-position: 50% 0;
@@ -47,6 +47,17 @@
     max-height: 90px;
     margin-right: auto;
     position: relative;
+    
+    &:before {
+        content: "";
+        position: absolute;
+        width: 68em; //310 (width of the underline) *fix to relative
+        height: 3px;
+        left: 4.5px;
+        bottom: -4.22em;
+        background-color: $brand-color;
+        visibility: visible;
+    }
 }
 
 .header-left {
@@ -68,7 +79,7 @@
     margin-left: 5px;
     
     position: relative;
-    color: $grey-color-light;
+    color: $white-color;
     text-decoration: none;
 
     
@@ -83,18 +94,18 @@
     &:before {
         content: "";
         position: absolute;
-        width: 400%; //310 (width of the underline) *fix to relative
+        width: 97%; //310 (width of the underline) *fix to relative
         height: 3px;
         bottom: 20px;
         left: 0;
-        background-color: $brand-color;
-        visibility: visible;
+        background-color: $white-color;
+        visibility: hidden;
         
         // Uncomment to add animation
-//        -webkit-transform: scaleX(0);
-//        transform: scaleX(0);
-//        -webkit-transition: all 0.3s ease-in-out 0s;
-//        transition: all 0.3s ease-in-out 0s;
+        -webkit-transform: scaleX(0);
+        transform: scaleX(0);
+        -webkit-transition: all 0.3s ease-in-out 0s;
+        transition: all 0.3s ease-in-out 0s;
     }
     
     &:hover:before {
@@ -121,6 +132,5 @@
     &:hover {
         color: $offset-highlight;
     }
+
 }
-
-
