--- a/Code/site/css/main.scss
+++ b/Code/site/css/main.scss
@@ -11,7 +11,7 @@ $spacing-unit:          30px;
 $base-font-size:        16px;
 $small-font-size:       $base-font-size * 0.875;
 
-$content-width:         1080px;
+$content-width:         960px; // 1080, or 1280 (old)?
 // Home page "page limit" found in hompage.liquid
 
 $brand-color:           #3e6990; // old cyan #2a7ae2;
@@ -20,7 +20,7 @@ $light-color:           #fdfdfd; // icey white
 $offset-color:          #957186; // soft red
 $complement-color:      #497e43; // light green (#fffd82 for yellow)
 
-$nav-hightlight-color:  $offset-color;
+$nav-hightlight-color:  $complement-color;
 $complement-highlight:  lighten($complement-color, 10%);
 $brand-highlight:       lighten($brand-color, 5%); // og #8ea4d2
 $offset-highlight:      lighten($offset-color, 10%);
