Renamed files back to html - switched Ide's again after C9 was being laggy. Using Webstorm now, without liquid highlighting

--- a/Code/site/_includes/header.html
+++ b/Code/site/_includes/header.html
@@ -14,7 +14,7 @@
         
         <div class='header-right'>
             
-            {% include navbar.liquid %}
+            {% include navbar.html %}
         
         </div>
 
