--- a/Code/site/_layouts/post.html
+++ b/Code/site/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="post">
     
-    {% include soundplayer.liquid %}
+    {% include soundplayer.html %}
 
     <header class="post-header">
         
